--- a/microb_uy_mobile/App.xaml
+++ b/microb_uy_mobile/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:microb_uy_mobile"
+             xmlns:helpers="clr-namespace:microb_uy_mobile.Helpers"
              x:Class="microb_uy_mobile.App">
     <Application.Resources>
         <ResourceDictionary>
